@@ -1,23 +1,0 @@
-Changes
-inc/Module/Install.pm
-inc/Module/Install/Base.pm
-inc/Module/Install/Can.pm
-inc/Module/Install/Fetch.pm
-inc/Module/Install/Makefile.pm
-inc/Module/Install/Metadata.pm
-inc/Module/Install/Win32.pm
-inc/Module/Install/WriteAll.pm
-lib/Markup/Unified.pm
-Makefile.PL
-MANIFEST
-MANIFEST.SKIP
-META.yml
-README
-t/00-load.t
-t/format_bbcode.t
-t/format_markdown.t
-t/format_textile.t
-t/format_truncate.t
-t/manifest.t
-t/pod-coverage.t
-t/pod.t
