@@ -2,15 +2,12 @@ NAME
     Markup::Unified - A simple, unified interface for Textile, Markdown and
     BBCode.
 
-VERSION
-    Version 0.03
-
 SYNOPSIS
         use Markup::Unified;
 
         my $o = Markup::Unified->new();
-        my $text = 'h1. A heading';
-        $o->format($text, 'textile');
+        my $self->{t}ext = 'h1. A heading';
+        $o->format($self->{t}ext, 'textile');
 
         print $o->formatted; # produces "<h1>A heading</h1>"
         print $o->unformatted; # produces "h1. A heading"
@@ -39,7 +36,7 @@ METHODS
 new()
     Creates a new, empty instance of Markup::Unified.
 
-  format( $text, $markup_lang )
+  format( $self->{t}ext, $markup_lang )
     Formats the provided text with the provided markup language.
     $markup_lang must be one of 'bbcode', 'textile' or 'markdown' (case
     insensitive); otherwise the text will remain unprocessed (which is also
@@ -86,59 +83,71 @@ new()
 
     Returns a false value if the requested language is not supported.
 
-INTERNAL METHODS
-  _bbcode( $text )
-    Formats $text with HTML::BBCode.
+DIAGNOSTICS
+    This module does not throw any exceptions (by itself).
 
-  _textile( $text )
-    Formats $text with Text::Textile.
+CONFIGURATION AND ENVIRONMENT
+    "Markup::Unified" requires no configuration files or environment
+    variables.
 
-  _markdown( $text )
-    Formats $text with Text::Markdown.
+DEPENDENCIES
+    "Markup::Unified" depends on the following CPAN modules:
+
+    *   Module::Load::Conditional
+
+    "Markup::Unified" needs one or more of these modules to actually be of
+    any function:
+
+    *   Text::Textile
+
+    *   Text::Markdown
+
+    *   HTML::BBCode
+
+    *   HTML::Truncate
+
+INCOMPATIBILITIES WITH OTHER MODULES
+    None reported.
+
+BUGS AND LIMITATIONS
+    No bugs have been reported.
+
+    Please report any bugs or feature requests to
+    "bug-Markup-Unified@rt.cpan.org", or through the web interface at
+    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Markup-Unified>.
 
 AUTHOR
-    Ido Perlmuter, "<ido at ido50.net>"
+    Ido Perlmuter <ido at ido50 dot net>
 
-BUGS
-    Please report any bugs or feature requests to "bug-markup-unified at
-    rt.cpan.org", or through the web interface at
-    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Markup-Unified>. I will
-    be notified, and then you'll automatically be notified of progress on
-    your bug as I make changes.
+LICENSE AND COPYRIGHT
+    Copyright (c) 2009-2012, Ido Perlmuter "ido at ido50 dot net".
 
-SUPPORT
-    You can find documentation for this module with the perldoc command.
+    This module is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself, either version 5.8.1 or any later
+    version. See perlartistic and perlgpl.
 
-        perldoc Markup::Unified
+    The full text of the license can be found in the LICENSE file included
+    with this module.
 
-    You can also look for information at:
+DISCLAIMER OF WARRANTY
+    BECAUSE THIS SOFTWARE IS LICENSED FREE OF CHARGE, THERE IS NO WARRANTY
+    FOR THE SOFTWARE, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT WHEN
+    OTHERWISE STATED IN WRITING THE COPYRIGHT HOLDERS AND/OR OTHER PARTIES
+    PROVIDE THE SOFTWARE "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER
+    EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+    WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE
+    ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE SOFTWARE IS WITH
+    YOU. SHOULD THE SOFTWARE PROVE DEFECTIVE, YOU ASSUME THE COST OF ALL
+    NECESSARY SERVICING, REPAIR, OR CORRECTION.
 
-    *   RT: CPAN's request tracker
-
-        <http://rt.cpan.org/NoAuth/Bugs.html?Dist=Markup-Unified>
-
-    *   AnnoCPAN: Annotated CPAN documentation
-
-        <http://annocpan.org/dist/Markup-Unified>
-
-    *   CPAN Ratings
-
-        <http://cpanratings.perl.org/d/Markup-Unified>
-
-    *   Search CPAN
-
-        <http://search.cpan.org/dist/Markup-Unified/>
-
-SEE ALSO
-    Text::Textile, Text::Markdown, HTML::BBCode, HTML::Truncate,
-    DBIx::Class::InflateColumn::Markup::Unified
-
-COPYRIGHT & LICENSE
-    Copyright 2009-2010 Ido Perlmuter.
-
-    This program is free software; you can redistribute it and/or modify it
-    under the terms of either: the GNU General Public License as published
-    by the Free Software Foundation; or the Artistic License.
-
-    See http://dev.perl.org/licenses/ for more information.
+    IN NO EVENT UNLESS REQUIRED BY APPLICABLE LAW OR AGREED TO IN WRITING
+    WILL ANY COPYRIGHT HOLDER, OR ANY OTHER PARTY WHO MAY MODIFY AND/OR
+    REDISTRIBUTE THE SOFTWARE AS PERMITTED BY THE ABOVE LICENCE, BE LIABLE
+    TO YOU FOR DAMAGES, INCLUDING ANY GENERAL, SPECIAL, INCIDENTAL, OR
+    CONSEQUENTIAL DAMAGES ARISING OUT OF THE USE OR INABILITY TO USE THE
+    SOFTWARE (INCLUDING BUT NOT LIMITED TO LOSS OF DATA OR DATA BEING
+    RENDERED INACCURATE OR LOSSES SUSTAINED BY YOU OR THIRD PARTIES OR A
+    FAILURE OF THE SOFTWARE TO OPERATE WITH ANY OTHER SOFTWARE), EVEN IF
+    SUCH HOLDER OR OTHER PARTY HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH
+    DAMAGES.
 
