@@ -1,0 +1,7 @@
+name    = Markup-Unified
+author  = Ido Perlmuter <ido@ido50.net>
+license = Perl_5
+copyright_holder = Ido Perlmuter
+copyright_year   = 2009
+
+[@IDOPEREL]
